--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="app" class="max-w-7xl mx-auto p-4">
         <div id="calendar-container" class="bg-gray-800/80 rounded-xl shadow-2xl p-6">
             <h1 class="text-5xl font-bold text-gray-300 mb-6 text-center gothic-header">
-                Barovian Chronicles
+                Curse of Strahd Reloaded Calendar
             </h1>
             
             <div class="grid grid-cols-3 gap-4">
