--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
             { date: new BarovianDate(735, 10, 17), title: "First Tyrant Trial - Vallaki", description: "The first of the Tyrant Trials takes place as Strahd approaches the party in Vallaki", type: "event" },
             { date: new BarovianDate(735, 10, 18), title: "Second Tyrant Trial - Tsolenka Pass", description: "The second of the Tyrant Trials takes place as Strahd approaches the party in Tsolenka Pass", type: "event" },
             { date: new BarovianDate(735, 10, 19), title: "Third Tyrant Trial - Soldav", description: "The third of the Tyrant Trials takes place as Strahd approaches the party in Soldav", type: "event" },
-            { date: new BarovianDate(735, 10, 22), title: "Argynvost's Soul Destroyed", description: "Argynvost's soul is destroyed with the lighting of the beacon", type: "event" }
+            { date: new BarovianDate(735, 10, 23), title: "Argynvost's Soul Destroyed", description: "Argynvost's soul is destroyed with the lighting of the beacon", type: "event" },
+            { date: new BarovianDate(735, 10, 24), title: "Cheese gets sent to the Shadow Realm", description: "Uh oh no how embarasing Dark Powers sent you to a world where all your enemies stack endless guidance", type: "event" }
+
         ];
 
         const initialQuests = [
